@@ -1,5 +1,6 @@
 == FeedTools 0.2.25
  * better support for threaded applications
+ * generated rss 2.0 now includes managingEditor and webMaster elements
 == FeedTools 0.2.24
  * fixed autodiscovery bugs
  * updated autodiscovery to handle relative uris
